# test-cmake-gitsubmodule

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  info.txt  main.cpp  run.sh
Adder/: CMakeLists.txt  adder.cpp  adder.h
